--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -544,7 +544,6 @@ body {
 
 
 
-
         function calculateTurn(task, selectedDate) {
     const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
     const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
@@ -556,11 +555,11 @@ body {
         assignedUsers[parseInt(index)] = user;
     });
 
+    // Include both completions and pending completions
     const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
     const pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
-    const allCompletedUsers = [...new Set([...completedUsers, ...pendingUsers])];
-    const completedCount = allCompletedUsers.length;
-    const completedSet = new Set(allCompletedUsers);
+    const completedCount = completedUsers.length + pendingUsers.length;
+    const completedSet = new Set([...completedUsers, ...pendingUsers]);
 
     function parseLocalDate(dateStr) {
         const [year, month, day] = dateStr.split("-").map(Number);
@@ -575,32 +574,45 @@ body {
     let nextUser = null;
 
     if (completedCount >= repeatLimit) {
-        // All completions done for the day
         currentTurn = "All done!";
         nextUser = "—";
-    } else if (selected < today) {
-        // Past date: Show who could have done it
-        for (let i = 0; i < assignedUsers.length; i++) {
-            const index = (completedCount + i) % assignedUsers.length;
-            if (!completedSet.has(assignedUsers[index])) {
-                currentTurn = assignedUsers[index];
-                break;
+    } else {
+        // Find the last completion date before today
+        let lastCompletionDate = null;
+        let lastCompletedCount = 0;
+        if (task.completions) {
+            const completionDates = Object.keys(task.completions)
+                .map(date => parseLocalDate(date))
+                .filter(date => date < today)
+                .sort((a, b) => b - a);
+            if (completionDates.length > 0) {
+                lastCompletionDate = completionDates[0];
+                const lastDateStr = lastCompletionDate.toISOString().split("T")[0];
+                const lastCompletions = task.completions[lastDateStr] || [];
+                const lastPending = task.pendingCompletions?.[lastDateStr] || [];
+                lastCompletedCount = lastCompletions.length + lastPending.length;
             }
         }
-        if (currentTurn) {
-            const currentIndex = assignedUsers.indexOf(currentTurn);
-            const nextIndex = (currentIndex + 1) % assignedUsers.length;
+
+        if (selected < today) {
+            // Past date: Use actual completions for this date
+            const currentIndex = completedCount % assignedUsers.length;
+            currentTurn = assignedUsers[currentIndex];
+            const nextIndex = (completedCount + 1) % assignedUsers.length;
             nextUser = completedSet.has(assignedUsers[nextIndex]) ? "—" : assignedUsers[nextIndex];
         } else {
-            currentTurn = "All done!";
-            nextUser = "—";
+            // Today or future: Start from last completion date
+            let startIndex = 0;
+            if (lastCompletionDate) {
+                const daysDiff = Math.floor((selected - lastCompletionDate) / (1000 * 60 * 60 * 24));
+                const totalCompletions = lastCompletedCount + (daysDiff - 1) * repeatLimit;
+                startIndex = totalCompletions % assignedUsers.length;
+            }
+            const currentIndex = (startIndex + completedCount) % assignedUsers.length;
+            currentTurn = assignedUsers[currentIndex];
+            const nextIndex = (startIndex + completedCount + 1) % assignedUsers.length;
+            nextUser = assignedUsers[nextIndex];
         }
-    } else {
-        // Today or future date: Rotate based on completedCount
-        const currentIndex = completedCount % assignedUsers.length;
-        currentTurn = assignedUsers[currentIndex];
-        const nextIndex = (completedCount + 1) % assignedUsers.length;
-        nextUser = assignedUsers[nextIndex];
     }
 
     return {
@@ -610,9 +622,6 @@ body {
         repeatLimit
     };
 }
-
-
-
 
 
 
